test ngidol jeketi48zzz

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -25,6 +25,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Kelasnya anak ngoding" />
+        android:text="Kelasnya anak-anak pada ngoding" />
 
 </LinearLayout>
